<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spitzer.myappprotfolio.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/my_nanodegree_apps"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <Button
            android:layout_gravity="center"
            android:id="@+id/button_movies"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="74dp"
            android:text="@string/popular_movies" />

        <Button
            android:id="@+id/button_stock"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stock_hawk" />

        <Button
            android:id="@+id/button_bigger"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/app_material"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/make_yoour_app_material" />

        <Button
            android:id="@+id/button_ubiquitous"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/go_ubiquitous" />

        <Button
            android:id="@+id/button_capstone"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/capstone" />
    </LinearLayout>
</RelativeLayout>
